fix: swagger host
